# hal

./: README.md  hal.cabal  stack.yaml
src/Data/: Hal.hs
test/Data/: HalSpec.hs
