name:                   hal
version:                0.1.0.0
synopsis:               Generate HAL representations
homepage:               https://github.com/whittle/hal
license:                BSD3
license-file:           LICENSE
author:                 Jason Whittle
maintainer:             jason.whittle@gmail.com
copyright:              Copyright (c) 2016 Jason A. Whittle
category:               Text, Web, JSON
build-type:             Simple
cabal-version:          >=1.10
description:
  Generate application/hal+json representations of nested data structures.

extra-source-files:     LICENSE
                      , README.md
                      , stack.yaml

library
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  exposed-modules:      Data.String.Strip

test-suite hal-test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , hal
                      , hspec
                      , QuickCheck
  hs-source-dirs:       test
  main-is:              Spec.hs

source-repository head
  type:     git
  location: https://github.com/whittle/hal
