name:                   hal
version:                0.1.0.0
synopsis:               Generate HAL representations
homepage:               https://github.com/whittle/hal
license:                BSD3
license-file:           LICENSE
author:                 Jason Whittle
maintainer:             jason.whittle@gmail.com
copyright:              Copyright (c) 2016 Jason A. Whittle
category:               Text, Web, JSON
build-type:             Simple
cabal-version:          >=1.10
description:
  Generate application/hal+json representations of nested data structures.

extra-source-files:     LICENSE
                      , README.md
                      , stack.yaml

library
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base >= 4.7 && < 5
                      , aeson
                      , aeson-pretty
                      , text
                      , unordered-containers
  hs-source-dirs:       src
  exposed-modules:      Data.Hal

test-suite hal-test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  default-extensions:   DeriveGeneric
                      , OverloadedStrings
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , hal
                      , aeson
                      , hjsonpointer
                      , hspec
                      , QuickCheck
                      , text
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        Data.HalSpec

source-repository head
  type:     git
  location: https://github.com/whittle/hal
